<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Forage</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">List Fragment</string>
    <string name="add_fragment_label">Add Fragment</string>

    <string name="forageable_name">Name</string>
    <string name="forageable_location">Location</string>
    <string name="have_notification">Have Notification</string>
    <string name="None_notification">None Notification</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="set_notification">Set Notification</string>
    <string name="label_list">CountDown List</string>
    <string name="label_add">Add</string>
    <string name="label_detail">Detail</string>
    <string name="label_edit">Edit</string>
</resources>
