<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="datePickerFragment"
            type="com.example.forage.ui.DatePickerDialogFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:padding="16dp"
        tools:context=".ui.AddCountDownFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/forageable_name"
            android:id="@+id/name_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:inputType="textAutoComplete"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/forageable_location"
            android:id="@+id/location_address_label"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_address_input"
                android:inputType="textAutoComplete"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="Datetime"
            android:id="@+id/datetime_label"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_address_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/datetime_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date|textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/in_season_checkbox"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:text="@string/set_notification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datetime_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/notes"
            android:id="@+id/notes_label"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/in_season_checkbox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes_input"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes_label">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:text="@string/save" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/delete"
                android:visibility="gone"
                app:backgroundTint="#8A009688" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>